fix: table icons being too big

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ md-divider {
 }
 
 .icon {
-    height: 75px;
+    height: 40px;
     display: block;
     margin: auto;
     width: 50%;
